Fix dark mode

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -233,7 +233,3 @@ footer p {
   padding: 10px;
   border-radius: 25px;
 }
-
-.edit-note-div {
-  max-width: 100px;
-}
